# Sentiment_Analysis

./: Readme.md  sample.env
Data/: customer_reviews.csv
Reviews_Scorer/: app.py  crew.py  helper.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.js
frontend/src/app/components/: FileUploader.js  Navbar.js  Review.js
frontend/src/app/styles/: FileUploader.module.css  Navbar.module.css  page.module.css  review.module.css
